# DBGDGM_Improvements

./: .gitattributes  .gitignore  DIGITALOCEAN_CHANGES.md  DIGITALOCEAN_GUIDE.md  FILE_STRUCTURE.md  KAGGLE_README.md  MM-DBGDGM_Architecture.md  MODAL_FMRI_DICOM_TRAINING_FLOW.md  PREPROCESSING_GUIDE.md  PREPROCESSING_SETUP_COMPLETE.md  QUICK_START.md  README.md  app.py  check_prepared.py  debug_prep_run.py  evaluate.py  inference.py  kaggle_mmdbgdgm.py  kaggle_training_guide.md  main.py  modal_train.py  pipeline.py  prepare_and_upload_dicom_bundle.py  prepare_and_upload_modal_inputs.py  prepare_kaggle_arrays.py  prepare_smri_jpg_dataset.py  probe_wekan.py  pyproject.toml  requirements-digitalocean.txt  requirements-modal.txt  requirements.txt  results_analysis.md  train_local.py  upload_vm_datasets.ps1  upload_vm_inputs.ps1  utils_inference.py
Alzhiemers_Training/: main.py  modal_train.py  setup_droplet.sh  smri_local_inference.py  sync_results.ps1  sync_results.sh  train_do.sh  upload_data_scp.ps1  upload_data_scp.sh
Alzhiemers_Training/src/: dataset.py  diagnosis.py  inference.py  model.py  (+3 more)
MM_DBGDGM/: README.md  __init__.py  config.yaml  fix_notebook.py  inference_report.py  manage_experiments.py  requirements.txt  run_experiment.py  train.py  validate_nb.py
Preprocessing/: README.md  main.py  requirements.txt
Preprocessing_Kaggle/: README.md  requirements.txt
results/: best_model.pt
scripts/: build_labels_from_downloads.py  download_drive_to_inputs.sh  evaluate_best.sh  extract_inputs.sh  preprocess_balanced_splits.py  train_do_gpu.sh  train_preprocessed.sh
(+79 files in other folders)
