[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-dbgdgm-improvements"
version = "0.1.0"
description = "Cleaned-up training and preprocessing workflows for MM-DBGDGM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "nilearn>=0.10.0",
  "nibabel>=5.0.0",
  "pydicom>=2.4.0",
  "networkx>=3.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "tensorboard>=2.15",
  "tqdm>=4.66",
  "opencv-python-headless>=4.9",
  "gdown>=5.1",
  "torch_geometric>=2.5.0",
]

[project.scripts]
dbgdgm = "main:main"
dbgdgm-pipeline = "pipeline:main"
dbgdgm-train-local = "train_local:main"

[tool.setuptools]
py-modules = ["main", "pipeline", "train_local"]

[tool.setuptools.packages.find]
include = ["MM_DBGDGM*"]
